<resources>
    <string name="app_name">Ribbit</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_title">Oops!</string>
    <string name="signup_error_message">Please make sure you enter all the required fields!</string>
    <string name="login_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_title">Enter your email.</string>
    <string name="error_email_title">Oops!</string>
    <string name="success_message_email">A rest email was sent</string>
    <string name="empty_inbox_label">No new Messages</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="lastname_hint">Lastname</string>
    <string name="firstname_hint">Firstname</string>
    <string name="title_activity_profile">Profile</string>
    <string name="friend_info_title">Friend\'s Info</string>
    <string name="username_label">Username :</string>
    <string name="firstname_label">Firstname :</string>
    <string name="lastname_title">Lastname :</string>
    <string name="hometown_label">Hometown :</string>
    <string name="email_label">Email :</string>
    <string name="wensite_label">Website :</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry! there was an error.</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB!</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_too_large">Selected file is too large.Select a new file</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file</string>
    <string name="error_selecting_file_title">We\'re Sorry!</string>
    <string name="success_message">Message Sent!</string>
    <string name="error_sending_message">There was an error sending your message.Please try again!</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="send_text_message_title">send</string>
    <string name="title_activity_text_recipients">TextRecipients</string>
    <string name="title_error_sending_text">We\'re Sorry!</string>
    <string name="message_error_sending_text">There was an error sending your message.Please try again!</string>
    <string name="title_creating_text_message">We\'re Sorry!</string>
    <string name="message_creating_text_message">There was an error creating the message!</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="message_time">2 hrs ago</string>
    <string name="content_description_background">Ribbit frog background image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_des_button_divider">Button Divider</string>
    <string name="content_message_icon">Message Icon</string>
    <string name="content_desc_avatar">User Avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">You have a new Ribbit message from %s!</string>
</resources>
