<RelativeLayout style="@style/AuthBackground"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.android.ribbit.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subTitle"
        style="@style/AuthSubTitle"
        android:layout_marginTop="0dp"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">


        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint"
            android:inputType="textPersonName">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/firstnameField"
            style="@style/AuthEditText"
            android:hint="@string/firstname_hint"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/lastnameField"
            style="@style/AuthEditText"
            android:hint="@string/lastname_hint"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/hometownField"
            style="@style/AuthEditText"
            android:hint="Hometown"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthEditText"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/websiteField"
            style="@style/AuthEditText"
            android:hint="Website"
            android:inputType="textPersonName"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivider"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_des_button_divider"/>

    <Button
        android:id="@+id/signUpButton"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLayout"
        android:text="@string/sign_up_button_label"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"/>

    <Button
        android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:text="@string/cancel_button_label"
        android:layout_marginLeft="0dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>
