<RelativeLayout
    android:id="@+id/loginLayout"
    style="@style/AuthBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.ribbit.ui.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subTitle"
        style="@style/AuthSubTitle"
        android:layout_marginTop="0dp"/>


    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>


    <Button
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLayout"
        android:text="@string/login_button"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>
